WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286473
MediaStreamTrack configuration change event is not triggered
https://bugs.webkit.org/show_bug.cgi?id=286473
Summary
MediaStreamTrack configuration change event is not triggered
Stefan Benicke
Reported
2025-01-24 06:58:45 PST
The background blur API [1] is available in Safari. It tells correctly if backgroundBlur is enabled or not at the beginning of the MediaStreamTrack's lifetime. The backgroundBlur setting is never updated, even if the system camera effect "Portrait" is changed. Furthermore, the "onconfigurationchange" event [2] is never triggered, even if the system camera effect "Portrait" is changed. The official demo [3] proves that it's working at the beginning, but doesn't trigger the configurationchange event. I could test on Safari Version 18.2 (20620.1.16.11.8) and also Safari Tech Preview Release 211 (Safari 18.2, WebKit 20621.1.9.111.1) on a MacBook Pro with Apple M2 Pro on macOS 15.2 (24C101). And also tested on an iPhone 13 mini with iOS 18.2.1. [1]
https://github.com/riju/backgroundBlur/blob/main/explainer.md#background-blur-api
[2]
https://w3c.github.io/mediacapture-extensions/#exposing-change-of-mediastreamtrack-configuration
[3]
https://googlechrome.github.io/samples/image-capture/background-blur.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-24 07:21:34 PST
<
rdar://problem/143568586
>
youenn fablet
Comment 2
2025-01-27 00:24:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39584
EWS
Comment 3
2025-01-29 00:56:56 PST
Committed
289492@main
(09a258d7bf2d): <
https://commits.webkit.org/289492@main
> Reviewed commits have been landed. Closing PR #39584 and removing active labels.
Stefan Benicke
Comment 4
2025-02-14 01:40:22 PST
Thanks for the update! I've tested in Safari Tech Preview 213 (
https://developer.apple.com/documentation/safari-technology-preview-release-notes/stp-release-213
), and the "configurationchange" event is triggered. Awesome. Unfortunately, it still shows the wrong value of "backgroundBlur". It always shows the value that was set at the beginning of the VideoTrack's lifetime. If it was true, it will always be true, even if "Portrait" effect is turned off.
Stefan Benicke
Comment 5
2025-02-14 01:50:25 PST
I've created a new ticket for this issue
https://bugs.webkit.org/show_bug.cgi?id=287692
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug