MediaStreamTrack configuration change event is not triggered https://bugs.webkit.org/show_bug.cgi?id=286473 rdar://143568586

Reviewed by Eric Carlson.

Add an observer for background blur on device and trigger configuration change when background blur is changing.
Manually tested.

* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h:
* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::AVVideoCaptureSource):
(WebCore::AVVideoCaptureSource::~AVVideoCaptureSource):
(WebCore::AVVideoCaptureSource::configurationChanged):
(-[WebCoreAVVideoCaptureSourceObserver observeValueForKeyPath:ofObject:change:context:]):

Canonical link: https://commits.webkit.org/289492@main