Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h
@@ -79,6 +79,8 @@ public:
     void captureDeviceSuspendedDidChange();
     void captureOutputDidFinishProcessingPhoto(RetainPtr<AVCapturePhotoOutput>, RetainPtr<AVCapturePhoto>, RetainPtr<NSError>);
 
+    void configurationChanged();
+
 private:
     AVVideoCaptureSource(AVCaptureDevice*, const CaptureDevice&, MediaDeviceHashSalts&&, std::optional<PageIdentifier>);
     virtual ~AVVideoCaptureSource();
